# leptos-playground

./: .gitignore  Cargo.toml  Earthfile  index.html  justfile  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml  tailwind.config.js
e2e/: example.spec.ts
src/: async_components.rs  main.rs
